# orderflow

./: .dockerignore  .gitignore  docker-compose.yml  init-kafka.sh  kafka-topics.sh  pyproject.toml
auth-service/: .env-example  Dockerfile
auth-service/app/: main.py
auth-service/app/api/: auth.py  dependencies.py  health.py  middleware.py
auth-service/app/core/: config.py  exceptions.py
auth-service/app/migrations/: env.py
auth-service/app/models/: refresh_tokens.py  users.py
auth-service/app/repositories/: base.py  refresh_tokens.py  users.py
auth-service/app/schemas/: refresh_tokens.py  users.py
auth-service/app/services/: auth.py  base.py
inventory-service/: .env-example  Dockerfile
inventory-service/app/: main.py
inventory-service/app/api/: health.py
inventory-service/app/core/: config.py  inventory_command.py
inventory-service/app/schemas/: messages.py
orchestrator/: .env-example  Dockerfile
orchestrator/app/: main.py  models.py
orchestrator/app/api/: health.py
orchestrator/app/consumer/: dlq_reader.py  order_events.py
orchestrator/app/core/: config.py  database.py  kafka_conn.py  logger.py
orchestrator/app/migrations/: env.py
orchestrator/app/producer/: commands.py
orchestrator/app/repositories/: base.py  processed_events.py  saga.py
orchestrator/app/saga/: handlers.py  retry.py  retry_policy.py  service.py
orchestrator/app/schemas/: events.py  messages.py  processed_events.py  saga.py
order-service/: .env-example  Dockerfile  alembic.ini
order-service/app/: main.py
order-service/app/api/: dependecies.py  dependencies.py  health.py  orders.py
order-service/app/consumer/: order_events.py
order-service/app/core/: config.py  database.py  exceptions.py  kafka_conn.py  redis_conn.py
order-service/app/migrations/: env.py
order-service/app/models/: orders.py
order-service/app/repositories/: base.py  orders.py
order-service/app/schemas/: kafka.py  orders.py  tokens.py
order-service/app/services/: base.py  db_manager.py  orders.py
payment-service/: .env-example  Dockerfile
payment-service/app/: main.py
payment-service/app/api/: health.py
payment-service/app/core/: config.py  (+2 more)
(+10 files in other folders)
